--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -70,8 +70,10 @@ margin-bottom: 20px;
    text-align: center;
 }
 .section-title{
-    margin-bottom: 30px;
-
+    margin-bottom: 50px;
+    text-align: center;
+    font-weight: 700;
+    font-size: 35px;
 }
 .section-description{
     color: #3532309c;
@@ -96,4 +98,26 @@ Main{
     font-weight: 700px;
     font-size: 20px;
     color: #474747;
+}
+.What-I-Do{
+    margin-top: 120px;
+}
+.skill-container{
+    display: flex;
+}
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+.skill-description{
+    font-weight: 400;
+font-size: 16px;
+}
+.skill{
+    background: #FFFFFF;
+box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+border-radius: 5px;
+padding: 30px;
 }
