--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -78,7 +78,7 @@ margin-bottom: 20px;
 .section-description{
     color: #3532309c;
     font-size: 20px;
-    margin-bottom: 35px;
+    margin-bottom: 30px;
 
 }
 /* Main section */
@@ -120,4 +120,49 @@ font-size: 16px;
 box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
 border-radius: 5px;
 padding: 30px;
+}
+.resume-content{
+    display: flex;
+    gap: 24px;
+}
+.resume .title{
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+    margin-bottom: 10px;
+}
+.resume .sub-title{
+    color: #757575;
+    font-weight: 600;
+    font-size: 20px;
+    margin-bottom: 20px;
+}
+.resume .description{
+    color:#757575 ;
+}
+.resume-item{
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+.resume-button{
+    margin-top: 50px;
+    text-align: center;
+}
+.contact .section-title{
+    text-align: left;
+}
+.contact{
+    display: flex;
+    gap: 100px;
+    background: #FFF8F3;
+    padding: 130px 200px;
+}
+.contact input,textarea{
+    margin: 24px;
+    border: 0;
+    width: 100%;
+    padding: 18px 30px;
+}
+.contact{
+    text-decoration: none;
 }
